--- a/res/scss/modules/pages/_newMember.scss
+++ b/res/scss/modules/pages/_newMember.scss
@@ -78,12 +78,11 @@
                         .box-wrap {
                             display: flex;
                             align-items: center;
-                            justify-content: center;
+                            justify-content: space-around;
                             .radio-btn-wrapper {
                                 display: flex;
                                 flex-direction: column;
                                 align-items: center;
-                                margin: 0 1rem;
                                 span {
                                     white-space: nowrap;
                                 }
@@ -230,7 +229,7 @@
                         display: flex;
                         flex-direction: column;
                         h3 {
-                            margin: min(1rem, 10%) 0;
+                            margin: min(0.5rem, 5%) 0;
                             font-style: italic;
                             font-size: $font-size-medium;
                             span {
@@ -243,7 +242,7 @@
                             flex-direction: column;
                             span {
                                 font-weight: $font-weight-bold;
-                                margin: min(2rem, 5%) 0;
+                                margin: min(1rem, 5%) 0;
                                 font-size: $font-size;
                             }
                             // * Input Global Styles
